这个版本主要是导入echart实现了之前说的路程图模样，一会我还得再改过来！！这里里面包括着之前的写的那些改的模拟订单的详解内容

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -6725,4 +6725,64 @@
     <servlet-name>dataDownload</servlet-name>
     <url-pattern>/dataDownload</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description>关于新建立的实验订单的后端程序</description>
+    <display-name>AddShiyanOrderServlet</display-name>
+    <servlet-name>AddShiyanOrderServlet</servlet-name>
+    <servlet-class>com.wl.testaction.orderManage.AddShiyanOrderServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddShiyanOrderServlet</servlet-name>
+    <url-pattern>/AddShiyanOrderServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>检验时间合理性的</description>
+    <display-name>checkMachineTime</display-name>
+    <servlet-name>checkMachineTime</servlet-name>
+    <servlet-class>com.wl.testaction.machineManage.checkMachineTime</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>checkMachineTime</servlet-name>
+    <url-pattern>/checkMachineTime</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>seclectMachineTime</display-name>
+    <servlet-name>seclectMachineTime</servlet-name>
+    <servlet-class>com.wl.testaction.machineManage.seclectMachineTime</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>seclectMachineTime</servlet-name>
+    <url-pattern>/seclectMachineTime</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>和前段的设备详情树对应的</description>
+    <display-name>SearchMachineInfo</display-name>
+    <servlet-name>SearchMachineInfo</servlet-name>
+    <servlet-class>com.wl.testaction.machineManage.SearchMachineInfo</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SearchMachineInfo</servlet-name>
+    <url-pattern>/SearchMachineInfo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>这个是用来根据树查找相应的设备详细的信息的</description>
+    <display-name>GetMachineTreeNodeInfo</display-name>
+    <servlet-name>GetMachineTreeNodeInfo</servlet-name>
+    <servlet-class>com.wl.testaction.machineManage.GetMachineTreeNodeInfo</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetMachineTreeNodeInfo</servlet-name>
+    <url-pattern>/GetMachineTreeNodeInfo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>对用showMachineNodeInfo的信息</description>
+    <display-name>ShowMachineNodeInfo</display-name>
+    <servlet-name>ShowMachineNodeInfo</servlet-name>
+    <servlet-class>com.wl.testaction.machineManage.ShowMachineNodeInfo</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShowMachineNodeInfo</servlet-name>
+    <url-pattern>/ShowMachineNodeInfo</url-pattern>
+  </servlet-mapping>
 </web-app>
