时间2018-7-01 修改内容：已经建立

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,7 @@ encoding//WebRoot/data/roleLeve.json=UTF-8
 encoding//WebRoot/demo/data/data.json=UTF-8
 encoding//WebRoot/resources/data/equreviewdata/expert_leader_review_date.json=UTF-8
 encoding//WebRoot/resources/data/equreviewdata/expert_review_date.json=UTF-8
+encoding//src/JSOM/JackSonTrans.java=UTF-8
+encoding//src/JSOM/Task.java=UTF-8
 encoding/<project>=UTF-8
 encoding/WebRoot=UTF-8
