这歌是自从改完名字之后，同时更换数据库之后，然后更换软件之后的第一次提交

--- a/WebRoot/WEB-INF/classes/.gitignore
+++ b/WebRoot/WEB-INF/classes/.gitignore
@@ -1,8 +1,15 @@
-/Bom/
-/DataCollection/
-/JSOM/
-/Test/
+/Bom
+/DataCollection
+/JSOM
+/META-INF
+/Test
 /c3p0-config.xml
-/cfmes/
-/com/
-/job/
+/cfmes
+/com
+/doExamineCheckoutServlet.class
+/editOrderStatusServlet.class
+/file
+/getCompanyIdServlet.class
+/job
+/lib
+/log4j.properties
