完善了一些数据实时显示的页面内容编写

--- a/WebRoot/WEB-INF/classes/.gitignore
+++ b/WebRoot/WEB-INF/classes/.gitignore
@@ -6,8 +6,11 @@
 /c3p0-config.xml
 /cfmes
 /com
+/file
+/job
+/lib
+/log4j.properties
+/machineOrderYuyue
 /doExamineCheckoutServlet.class
 /editOrderStatusServlet.class
 /getCompanyIdServlet.class
-/job
-/machineOrderYuyue
