1、将项目放到了eclispe中 2、更改了Tomcat9和jdk8，然后修改了web.xml中报错的地方 3、修改了好了预约那个地方返回值中文乱码，通过加入reponse.set(); 4、接下来：更改界面自适应，数据采集界面，将ssm加入

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,7 @@ encoding//WebRoot/resources/data/equreviewdata/expert_leader_review_date.json=UT
 encoding//WebRoot/resources/data/equreviewdata/expert_review_date.json=UTF-8
 encoding//src/JSOM/JackSonTrans.java=UTF-8
 encoding//src/JSOM/Task.java=UTF-8
+encoding//src/com/wl/testaction/ProcessplanAction.java=UTF-8
 encoding//src/machineOrderYuyue/yuYue/dateLInes.java=UTF-8
 encoding/<project>=UTF-8
 encoding/WebRoot=UTF-8
