--- a/WebRoot/WEB-INF/classes/.gitignore
+++ b/WebRoot/WEB-INF/classes/.gitignore
@@ -1,16 +1,8 @@
-/Bom
-/DataCollection
-/JSOM
-/META-INF
-/Test
+/Bom/
+/DataCollection/
+/JSOM/
+/META-INF/
+/Test/
 /c3p0-config.xml
-/cfmes
-/com
-/file
-/job
-/lib
-/log4j.properties
-/machineOrderYuyue
-/doExamineCheckoutServlet.class
-/editOrderStatusServlet.class
-/getCompanyIdServlet.class
+/cfmes/
+/com/
